# SpeechKitty

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  credentials.ini-example  pyproject.toml  requirements.txt  setup.py  transcribe_directory.sh
.github/workflows/: docker-image.yml  python-package.yml  python-publish.yml
app/speechkitty/: __init__.py  audio_converter.py  cloud_storage.py  directory.py  parser.py  result_parser.py  speech_service.py  transcriber.py
sample/: .env-example  backfill_analysis.py  credentials-example.ini  credentials.ini-example  mix_and_transcribe.sh  mix_channels.py  recreate_htmls.py  transcribe_directory.py  transcribe_directory.sh  transcribe_split_channels.py  transcribe_split_channels.sh  transcribe_with_diarization.py  transcribe_with_diarization.sh
sample/records/: out-88001000800-102-20231014-184547-1697298346.17.json  rg-170-74994043564-20231021-171101-1697897360.54.html  rg-170-74994043564-20231021-171101-1697897360.54.json  rg-170-74994043564-20231021-171101-1697897360.54.whisper.json
tests/: test_directory.py  test_parser.py  test_transcriber.py  test_transcriber_async.py  test_transcriber_whisper.py
