[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "speechkitty"
description = "A wrapper for two ASR services: Yandex SpeechKit and whisperX (based on OpenAI's Whisper) intended to asynchronously transcribe audio records."
dynamic = ["readme"]
authors = [{ name = "Aleksei Prishchepo", email = "speechkitty@outlook.com" }]
version = "0.2.1"
license = { text = "Apache 2.0" }
requires-python = ">=3.8"
dependencies = ["boto3", "pandas", "pydub", "requests", "python-dotenv", "click"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

[tool.setuptools.packages.find]
where = ["app"]
include = ["speechkitty*"]

[tool.setuptools.dynamic]
readme = { file = "README.md", content-type = "text/markdown" }

[project.optional-dependencies]
dev = ["pytest", "moto", "requests_mock"]

[project.urls]
Homepage = "https://github.com/AlekseiPrishchepo/SpeechKitty"
Source = "https://github.com/AlekseiPrishchepo/SpeechKitty"
